k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-crud-app-service
spec:
  selector:
    app: k8-crud-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3333
  type: LoadBalancer
